assets/sass/booking.scss
.o-booking__header-content {
  display: flex;
  flex-direction: column;
  gap: 0.8rem;
  width: 100%;
}

.o-booking__classes {
  display: flex;
  align-items: center;
  gap: 0.4rem;
  flex-wrap: wrap;
  > p {
    margin-bottom: 0rem;
  }

  @media (max-width: #{$breakpoint-md}) {
    &:empty {
      display: none;
    }
  }
}

.o-booking__classes-title {
  font-size: 1.6rem;
  flex-basis: 100%;
}

.o-booking__classes-tags {
  display: flex;
  flex-wrap: wrap;
  gap: 0.6rem;
}

.o-booking__title-wrapper {
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 0.4rem;
}

.o-booking__title {
  display: flex;
  gap: 0.4rem;
  align-items: center;
  font-weight: 600;
}

.o-booking__title-text {
  line-height: 1.1;
}

.o-booking__subtitle {
  font-weight: 400;
  font-size: 1.4rem;
}

.o-booking__meta {
  display: flex;
  flex-wrap: wrap;
  gap: 0.6rem;
  margin-top: 0.4rem;

  &:empty {
    margin-top: 0;
  }

  @media (max-width: #{$breakpoint-md}) {
    &:empty {
      display: none;
    }
  }
}

.o-booking__links {
  margin-top: 1.5rem;
  display: flex;
  gap: 1rem;
  flex-wrap: wrap;

  @media print {
    > a {
      flex-wrap: wrap;
      font-weight: bold;

      &::after {
        font-weight: normal;
      }
    }
  }
}

.o-booking__info {
  margin-bottom: 1.5rem;
}

.o-booking__sections {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.o-booking__content {
  h4 {
    @extend %h3;
  }

  h5 {
    @extend %h4;
  }

  h6 {
    @extend %h5;
  }
}

